--- a/wercker.yml
+++ b/wercker.yml
@@ -41,7 +41,7 @@
          password: $DOCKER_PASSWORD
          # we want to push both the release image and as the latest
          tag: dev-$WERCKER_GIT_COMMIT latest
-         repository: saikrishnabellam/devops
+         repository: shobhanaidu/testing
          registry: https://hub.docker.com
          ports: 80 443
          cmd: nginx -g 'daemon off';
@@ -50,13 +50,13 @@
    box: node:latest
    steps:
      - wercker/add-ssh-key:
-         keyname: SAI_DOCKER_AWS
+         keyname: shoba_DOCKER_AWS
      - add-to-known_hosts:
          hostname: $DEV_REMOTE_HOST
      - script:
          name: Pull newest docker images
          code: |
-           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker pull  saikrishnabellam/devops
+           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker pull  shobhanaidu/testing
      - script:
          name: Stop all running containers
          code: |
@@ -68,13 +68,13 @@
      - script:
          name: Remove image behind stopped container
          code: |
-           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker rmi saikrishnabellam/devops:current || echo ‘failed to remove image behind stopped container’
+           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker rmi shobhanaidu/testing:current || echo ‘failed to remove image behind stopped container’
      - script:
          name: Tag the pulled image
          code: |
-           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker tag saikrishnabellam/devops:latest saikrishnabellam/devops:current
+           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker tag shobhanaidu/testing:latest shobhanaidu/testing:current
      - script:
          name: Start all services/containers
          code: |
-           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker container run --detach -p 3333:80 --name ravi-linux saikrishnabellam/devops:current
+           ssh $DEV_REMOTE_USER@$DEV_REMOTE_HOST sudo docker container run --detach -p 3333:80 --name ravi-linux shobhanaidu/testing:current
 
